plugins {
    id 'fabric-loom' version '1.9-SNAPSHOT'
    id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

repositories {
    mavenCentral()
    // Kyori
    maven {
        url 'https://oss.sonatype.org/content/repositories/snapshots'
    }
    // Geckolib
    maven {
        url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
    }
    // SGUI
    maven {
        url 'https://maven.nucleoid.xyz/'
        name 'Nucleoid'
    }
    // Impactor
    maven {
        url 'https://maven.impactdev.net/repository/development/'
    }

}

dependencies {
    // To change the versions see the gradle.properties file
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

    // Fabric API. This is technically optional, but you probably want it anyway.
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-lifecycle-events-v1:${project.fabric_version}"

    // gooey
    modImplementation include("eu.pb4:sgui:1.6.1+1.21.1")
    implementation "cloud.commandframework:cloud-core:1.8.4"

    // impactor, pebs and *cobble economy api*
    modImplementation(files("libs/Impactor-Fabric-5.3.4+1.21.1.jar"))
    modImplementation(files("libs/pebbles-economy-1.0.1-1.21.1.jar"))

    //TODO: Kotlin (Delete this when impactor gets fixed)
    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.9.23"

    // Cobblemon 1.6.1
    modImplementation("com.cobblemon:fabric:1.6.1+1.21.1")

    // SnakeYAML
    implementation include(group: 'org.yaml', name: 'snakeyaml', version: '2.1')

    // LuckPerms
    compileOnly 'net.luckperms:api:5.4'

    // Adventure
    implementation 'net.kyori:adventure-text-minimessage:4.17.0'
    modImplementation include("net.kyori:adventure-platform-fabric:5.14.1")
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.release = 21
}

Map<String, String> resourceProperties = new HashMap<>()
resourceProperties.put("version", project.mod_version)
resourceProperties.put("loader_version", project.loader_version)
resourceProperties.put("minecraft_version", project.minecraft_version)

processResources {
    filesMatching("fabric.mod.json") {
        expand resourceProperties
    }
}

